[gd_scene load_steps=2 format=3 uid="uid://tx1fe2sjbs4q"]

[ext_resource type="Script" uid="uid://busfngpruxwbr" path="res://scripts/object/profile_button.gd" id="1_beauw"]

[node name="profile_button" type="BoxContainer" groups=["profile_panel"]]
custom_minimum_size = Vector2(0, 82)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -832.0
offset_bottom = -456.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_beauw")

[node name="Main_data" type="BoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="profile_name" type="Button" parent="Main_data"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "SERVER NAME"
alignment = 0
text_overrun_behavior = 1

[node name="BoxContainer" type="BoxContainer" parent="Main_data"]
layout_mode = 2
size_flags_vertical = 3

[node name="profile_discription" type="RichTextLabel" parent="Main_data/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="profile_delete_button" type="Button" parent="Main_data/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove"

[node name="type" type="Panel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.38

[node name="profile_type" type="Label" parent="type"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="Main_data/profile_name" to="." method="on_profile_selected"]
[connection signal="pressed" from="Main_data/BoxContainer/profile_delete_button" to="." method="_on_profile_delete"]
